--- a/src/main/resources/static/admin/css/cssAlertSuccess.css
+++ b/src/main/resources/static/admin/css/cssAlertSuccess.css
@@ -1,7 +1,7 @@
 .autoHide {
     animation: autoHide 0s ease-in 4s forwards;
     position: absolute;
-    z-index: auto;
+    z-index: 1;
     top: 5%;
     right: 20%;
 }
@@ -11,6 +11,8 @@
         width: 0;
         height: 0;
         display:none;
+        opacity: 0;
+        visibility: hidden;
     }
 }
 
